fixed wrapping issue from bootstrap

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,17 +2,9 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
+  
 }
-
-textarea {
-  background: transparent;
-  border: none;
-  resize: none;
-  color: #000000;
-  border-left: 1px solid black;
-  padding: 10px;
-}
-
+/* heading content  */
 .jumbotron {
   text-align: center;
   background-color: transparent;
@@ -20,29 +12,35 @@ textarea {
   border-radius: 0;
   border-bottom: 10px solid black;
 }
-
-.green {
+/* current items  */
+.red {
   background-color: rgb(223, 74, 74);
   list-style: none;
   text-align: left;
   padding:20px;
-  border: 2px solid black;
-  
+  border: 2px solid black;  
 }
-.yellow {
+
+/* future items */
+.green {
   background-color: rgb(113, 199, 113);
   list-style: none;
   text-align: left;
   padding:20px;
   border: 2px solid black;
-  
 }
-.fixbox{
 
-  padding: .375rem .46rem 
+/* past items */
+.time-block {
+  text-align: left;
+  background-color: rgb(245, 234, 234);
+  padding:20px;
+  border: 2px solid black;
 }
-.description {
-  white-space: pre-wrap;
+
+/* fixes alignment issue caused by bootstrap */
+.fixbox{
+  padding: .375rem .46rem 
 }
 .mb-3, .my-3 {
   margin-bottom: 0rem!important;
@@ -51,43 +49,12 @@ textarea {
   background-color: #06aed5;
   border-radius: 0px 15px 15px 0px;
 }
-
-.time-block {
-  
-  text-align: left;
-  background-color: rgb(245, 234, 234);
-  padding:20px;
-  border: 2px solid black;
-  
+.input-group {
+  display: flex;
+  flex-wrap: nowrap;
 }
 
-.row {
-  white-space: pre-wrap;
-  height: 80px;
-  border-top: 1px solid white;
-}
-
-.hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
-}
-
-.past {
-  background-color: #d3d3d3;
-  color: white;
-}
-
-.present {
-  background-color: #ff6961;
-  color: white;
-}
-
-.future {
-  background-color: #77dd77;
-  color: white;
-}
-
+/* button styling */
 .saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
